projects/compiler/test/typechecker/assignment/variable_error_alias_type.out
Error at %FILE_NAME%:3:1
Cannot assign to variable 'Foo'
  |  Foo = 123
     ^
'Foo' is a type, which cannot be overwritten
