projects/compiler/test/typechecker/assignment/variable_error_alias_type.abra
type Foo {}

Foo = 123